# langdetectpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
CMakeLibs/: AddCXXCompilerFlag.cmake  CXXFeatureCheck.cmake
include/langdetectpp/: Detector.h  Language.h  langdetectpp.h
scripts/: build_deps.sh  gen_lang_enum.py  gen_loaders.py  make_profiles.sh  transform_profile.py
src/: Detector.cpp  Detector.h  Language.cpp  Language.h  functional_test.cpp  main.cpp
src/detection/: DetectionRunner.cpp  DetectionRunner.h  Detector.h  DetectorImpl.h
src/ngrams/: ExtractedNGrams.h  NGramExtractor.cpp  NGramExtractor.h
src/profiles/: Profile.cpp  Profile.h  ProfileGroup.cpp  ProfileGroup.h  af.cpp  af.h  ar.cpp  ar.h  bg.cpp  bg.h  bn.cpp  bn.h  ca.cpp  ca.h  cs.cpp  cs.h  cy.cpp  cy.h  da.cpp  da.h  de.cpp  de.h  el.cpp  el.h  en.cpp  en.h  es.cpp  es.h  et.cpp  et.h  fa.cpp  fa.h  fi.cpp  fi.h  fr.cpp  fr.h  gu.cpp  gu.h  he.cpp  he.h  (+74 more)
src/profiles/langs/: af.cpp  af.h  ar.cpp  ar.h  bg.cpp  bg.h  bn.cpp  bn.h  ca.cpp  ca.h  cs.cpp  cs.h  cy.cpp  cy.h  da.cpp  da.h  de.cpp  de.h  el.cpp  el.h  en.cpp  en.h  es.cpp  es.h  et.cpp  et.h  fa.cpp  fa.h  fi.cpp  fi.h  fr.cpp  fr.h  gu.cpp  gu.h  he.cpp  he.h  hi.cpp  hi.h  hr.cpp  hr.h  (+70 more)
src/testing/: runTests.cpp
src/util/: CircleArray.h  Language.cpp  Language.h  misc.h  stats.h
text/: ar_from_wikipedia.txt  de_from_wikipedia.txt  en_jezebel.txt  es_from_wikipedia.txt  fr_from_wikipedia.txt  ru_from_wikipedia.txt
